# quantum-kapital

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  ALPHA_VANTAGE_IMPLEMENTATION.md  ALPHA_VANTAGE_SETUP.md  CLAUDE.md  CONTRIBUTING.md  FUNDAMENTAL_DATA_API.md  GOOGLE_SHEETS_DASHBOARD.md  GOOGLE_SHEETS_SETUP.md  IBKR_API_INTERFACES.md  IBKR_DEVELOPMENT_GUIDE.md  LICENSE  OPTION_B_PLUS_IMPLEMENTATION.md  README.md  SETTINGS_GUIDE.md  eslint.config.js  impl.md  package.json  pnpm-lock.yaml  subimpl.md  tailwind.config.js  test_pre_commit.md  vite.config.ts  vitest.config.ts
agent/: README.md  alert_dive.py  budget_guard.py  config.py  config.toml  data_summary.py  eod_review.py  llm.py  llm_cli.py  mcp_client.py  morning_sweep.py  playbook.py  pyproject.toml  ranker.py  synthesizer.py  ticker_intake.py  trade_review.py
agent/cron/: alert_dive.service  eod_review.cron  morning_sweep.cron  ticker_intake.service
agent/prompts/: alert_dive.md  eod_review.md  morning_sweep.md  playbook.md  ticker_intake.md
agent/scripts/: eod_review_dev.sh  morning_sweep_dev.sh
agent/tests/: conftest.py  test_alert_dive.py  test_budget_guard.py  test_data_summary.py  test_eod_review.py  test_eod_review_trade_review.py  test_llm_cli.py  test_morning_sweep.py  test_morning_sweep_playbook.py  test_playbook.py  test_prices.py  test_tag_mirror.py  test_ticker_intake.py  test_trade_review.py
src-tauri/: .env.example  CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/data/: fomc_dates.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: commands.rs  mod.rs  settings.rs
src-tauri/src/events/: emitter.rs  mod.rs
src-tauri/src/google_sheets/: auth.rs  commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/ibkr/: client.rs  commands.rs  error.rs  mocks.rs  mod.rs  state.rs  types.rs
src-tauri/src/ibkr/client/: executions_merge.rs  executions_merge_tests.rs  historical.rs  market_data.rs  mod.rs  news.rs  orders.rs  streams.rs
src-tauri/src/ibkr/commands/: accounts.rs  analysis.rs  assessments.rs  auto_scanner.rs  backtest.rs  candidates.rs  connection.rs  eval.rs  event_calendar.rs  exits.rs  market_data.rs  news.rs  order_ticket.rs  param_refit.rs  portfolio_risk.rs  regime.rs  research.rs  risk.rs  scanner.rs  sentiment.rs  share.rs  tca.rs  tilt_guard.rs  tracker.rs  trade_review_metrics.rs  trades.rs  trading.rs
src-tauri/src/ibkr/tests/: api_interface_tests.rs  client_tests.rs  command_tests.rs  integration_tests.rs  mod.rs
src-tauri/src/ibkr/types/: account.rs  connection.rs  data_tier.rs  fundamentals.rs  historical.rs  market_data.rs  news.rs  orders.rs  positions.rs  quote.rs  scanner.rs  tracker.rs
src-tauri/src/mcp/: handler.rs  ibkr_seam.rs  mod.rs  server.rs  transport.rs
src-tauri/src/mcp/tools/: account_summary.rs  ack_alert.rs  add_ticker.rs  alerts.rs  append_journal_entry.rs  archive_ticker.rs  bars.rs  budget.rs  executions.rs  fundamentals.rs  get_calibration_stats.rs  get_candidates.rs  get_cost_attribution.rs  get_morning_pack.rs  get_outcomes.rs  get_prediction_history.rs  get_sentiment.rs  get_today_playbook.rs  get_trade_legs.rs  get_trade_review.rs  get_trader_profile.rs  get_watchlist_briefing.rs  mark_alert_enriched.rs  mod.rs  news.rs  positions.rs  promote_candidate.rs  quote.rs  scanner.rs  set_fundamentals.rs  setups.rs  test_support.rs  watchlist.rs  write_morning_pack.rs  write_playbook.rs  write_research_note.rs  write_support.rs  write_trade_review.rs
src-tauri/src/middleware/: alpha_vantage_rate_limit.rs  historical_rate_limit.rs  ibkr_news_rate_limit.rs  logging.rs  mod.rs  rate_limit.rs
src-tauri/src/services/: account_service.rs  cache_service.rs  decay_watcher.rs  financial_data_service.rs  market_service.rs  mod.rs  news_cache.rs  projection_service.rs  research_notes.rs  trading_service.rs
src-tauri/src/services/agent_morning_packs/: mod.rs  tests.rs
src-tauri/src/services/alerts/: ack.rs  enrich.rs  mod.rs  tests.rs
src-tauri/src/services/auto_scanner/: mod.rs  tests.rs
src-tauri/src/services/backtester/: bars_reader.rs  fill_model.rs  mod.rs  replay.rs  results.rs  spec.rs  tests.rs  walk_forward.rs
src-tauri/src/services/bracket_reviser/: mod.rs  tests.rs
src-tauri/src/services/candidate_promoter/: mod.rs
src-tauri/src/services/candidate_scheduler/: mod.rs
src-tauri/src/services/candidate_universe/: mod.rs  repo.rs  types.rs
src-tauri/src/services/daily_ranker/: mod.rs  tests.rs
src-tauri/src/services/decay_watcher/: mod.rs  tests.rs  types.rs
src-tauri/src/services/eod_scheduler/: mod.rs  tests.rs
src-tauri/src/services/eval_harness/: mod.rs  tests.rs
src-tauri/src/services/event_calendar/: earnings.rs  earnings_store.rs  fomc.rs  mod.rs  tests.rs  types.rs
src-tauri/src/services/executions/: ingest.rs  mod.rs  store.rs  tests.rs
src-tauri/src/services/financial_data_service/: earnings.rs  fundamentals_tests.rs  income.rs  mod.rs  news.rs  news_tests.rs  overview.rs
src-tauri/src/services/fundamentals_provider/: alpha_vantage.rs  av_call_ledger.rs  av_call_ledger_tests.rs  composite.rs  manual.rs  mod.rs  test_support.rs  tests.rs
src-tauri/src/services/historical_data_service/: cache.rs  mod.rs  tests.rs
src-tauri/src/services/intraday_scheduler/: mod.rs  tests.rs
src-tauri/src/services/journal_writer/: mod.rs  tests.rs
src-tauri/src/services/llm_service/: backend.rs  cli_backend.rs  mod.rs  prices.rs  tests.rs  types.rs
src-tauri/src/services/manual_fundamentals_store/: mod.rs  tests.rs
src-tauri/src/services/mcp_audit/: mod.rs  tests.rs
src-tauri/src/services/news_interpreter/: mod.rs  tests.rs
src-tauri/src/services/regime/: mod.rs  (+6 more)
src-tauri/src/storage/: error.rs  migrations.rs  mod.rs  schema.sql  tests.rs
src-tauri/src/strategies/: candidate.rs  config.rs  config_tests.rs  context.rs  indicators.rs  mod.rs  registry.rs  tests.rs  trait_def.rs
src-tauri/src/utils/: helpers.rs  mod.rs
src-tauri/tests/: mcp_surveillance_audit.rs  mcp_tool_call.rs  news_provider_parity.rs  tracker_no_fundamentals.rs
src-tauri/tests/fixtures/: av_news_sentiment.json
(+482 files in other folders)
