[project]
name = "qk-agent"
version = "0.1.0"
description = "Quantum Kapital headless research agent (morning sweep, alert dive, EOD review, ticker intake)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
qk-morning-sweep = "morning_sweep:main"
qk-alert-dive = "alert_dive:main"
qk-eod-review = "eod_review:main"
qk-ticker-intake = "ticker_intake:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = [
    "morning_sweep.py",
    "alert_dive.py",
    "eod_review.py",
    "ticker_intake.py",
    "mcp_client.py",
    "budget_guard.py",
    "ranker.py",
    "synthesizer.py",
    "config.py",
    "data_summary.py",
    "llm.py",
    "llm_cli.py",
    "prompts/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
