[package]
name = "quantum-kapital"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quantum_kapital_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ibapi = { version = "2", default-features = false, features = ["sync"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
dotenv = "0.15"
dirs = "6"
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.27"
refinery = { version = "0.9", default-features = false, features = ["rusqlite"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
tempfile = "3"
