[package]
name = "quantum-kapital"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "quantum-kapital"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quantum_kapital_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ibapi = { version = "2", default-features = false, features = ["sync"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
dotenv = "0.15"
dirs = "6"
rusqlite = { version = "0.34", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.27"
refinery = { version = "0.9", default-features = false, features = ["rusqlite"] }
rmcp = "1.6"
interprocess = { version = "2", features = ["tokio"] }
schemars = "1"
tempfile = "3"

[features]
# Throwaway IBKR spike binaries (Phase 2 fundamentals + Phase 6 news).
# Off by default; both binaries require a live TWS connection (and the
# relevant subscriptions), so they must never build in CI / pre-commit.
ibkr-spike = []

[dependencies.time]
# Phase 7 part B: `time::OffsetDateTime` is the argument shape `ibapi`'s
# `historical_news` API takes. Always-on (no feature gate) so the IBKR
# news provider compiles in CI without flipping `ibkr-spike`. Minimal
# features to keep build tight; the spike binaries layer on `formatting`
# + `macros` via this same dep.
version = "0.3"
default-features = false
features = ["formatting", "macros"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp-server.rs"

[[bin]]
name = "ibkr_fundamentals_spike"
path = "src/bin/ibkr_fundamentals_spike.rs"
required-features = ["ibkr-spike"]

[[bin]]
name = "ibkr_news_spike"
path = "src/bin/ibkr_news_spike.rs"
required-features = ["ibkr-spike"]
